@@ -4,8 +4,9 @@ freebsd-buildutils (9.0-3) UNRELEASED; urgency=low
     HEAD.
   * Add __BEGIN_DECLS / __END_DECLS in local unistd.h.
   * Fix local endian.h to use native <sys/endian.h> on GNU/kFreeBSD.
+  * Add local sys/errno.h.
 
- -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 19:24:52 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 22:17:24 +0100
 
 freebsd-buildutils (9.0-2) unstable; urgency=low
 
